--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "@vercel/node": "^3.2.7",
     "dotenv-cli": "^7.4.2",
+    "mongoose": "^8.7.0",
     "telegraf": "^4.16.3"
   },
   "devDependencies": {
